--- a/app/views/navigation/_topnav.html.erb
+++ b/app/views/navigation/_topnav.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">MEAL TICKET</a>
+      <%= link_to "MEAL TICKET", root_path, class: "navbar-brand" %>
     </div>
     <% if current_page?('/map') %>
       <div class="map-explanation">
