add flash-error div

--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -3,6 +3,8 @@
   Stripe.setPublishableKey('pk_test_HmnZw3G1iR2Bbhq1JmfudxvY');
 </script>
 
+<div id="flash-error"><%= flash[:error] %></div>
+
   <%= form_tag purchases_path, id: 'purchase-form', class: 'stripe-purchase-form', method: :post do %>
     <div class="stripe-purchase-form">
       <div class="payment-errors"></div>
