--- a/app/views/restaurants/dashboard.html.erb
+++ b/app/views/restaurants/dashboard.html.erb
@@ -1,37 +1,46 @@
 <div class="container">
-  <h1><%= @restaurant.name %></h1>
-  <h3><%= @restaurant.cuisine %></h3>
-  <% @restaurant.promotions.each do |promotion| %>
-    <div class="col-md-4">
-      <div class="btn btn-lg btn-primary btn-block">
-        <%= promotion.name %>
-      </div>
-      <%= render :partial =>  "promotions/ticket", locals: {promotion: promotion} %>
+  <div class="dashboard-header-container">
+    <div class="dashboard-restaurant-data">
+      <h1><%= @restaurant.name %></h1>
+      <h3><%= @restaurant.cuisine %></h3>
+    </div>
 
-      <div class="table-responsive">
-        <table class="table">
-          <caption>Promotion Details</caption>
-          <thead>
-            <th>Min Group</th>
-            <th>Max Group</th>
-            <th>Preferred Group</th>
-            <th>Loss Tolerance</th>
-          </thead>
-          <tbody>
-            <td><%= promotion.min_group_size %></td>
-            <td><%= promotion.max_group_size %></td>
-            <td><%= promotion.preferred_group_size %></td>
-            <td><%= promotion.loss_tolerance %></td>
-          </tbody>
-        </table>
-      </div>
+    <div class="dashboard-new-promo-button">
+      <%= link_to "Create A New Promotion", new_restaurant_promotion_path(:restaurant_id => @restaurant.id), class: "btn btn-lg btn-primary" %>
     </div>
-  <% end %>
-    <div class="special-container col-md-4">
-      <div class="btn btn-lg btn-primary btn-block">
-        <%= link_to "New Promotion", new_restaurant_promotion_path(:restaurant_id => @restaurant.id) %>
+
+    <hr class="dashboard-hr"></hr>
+  </div>
+
+  <br><br>
+
+  <div class="col-md-6 all-promos">
+    <% @restaurant.promotions.each do |promotion| %>
+      <div class="col-md-12 single-promo">
+        <div class="view-tickets-btn btn btn-primary btn-block">
+          <%= promotion.name %>
+        </div>
+
+        <!-- <div class="table-responsive"> -->
+          <table class="promo-table col-md-12">
+            <thead>
+              <th>Min Group</th>
+              <th>Max Group</th>
+              <th>Preferred Group</th>
+              <th>Loss Tolerance</th>
+            </thead>
+            <tbody>
+              <td><%= promotion.min_group_size %></td>
+              <td><%= promotion.max_group_size %></td>
+              <td><%= promotion.preferred_group_size %></td>
+              <td><%= promotion.loss_tolerance %></td>
+            </tbody>
+          </table>
+        <!-- </div> -->
       </div>
-    </div>
+
+    <% end %>
+  </div>
 
 </div>
 
