add valid_on to promotions, need to add tests and change the form field to a date picker

--- a/app/views/promotions/new.html.erb
+++ b/app/views/promotions/new.html.erb
@@ -5,6 +5,10 @@
     <input type="text" name="promotion[name]">
   </div>
   <div class="form-group">
+    <label for="name">Valid on:</label>
+    <input type="text" name="promotion[valid_on]" placeholder="DD/MM/YYYY">
+  </div>
+  <div class="form-group">
     <label for="min_group_size">Set Min Group Size: </label>
     <input type="text" id="min_group_size" name="promotion[min_group_size]" readonly style="border:0; color:#f6931f; font-weight:bold; width: 50px;">
 
