--- a/app/views/restaurants/dashboard.html.erb
+++ b/app/views/restaurants/dashboard.html.erb
@@ -33,7 +33,8 @@
               <td><%= promotion.min_group_size %></td>
               <td><%= promotion.max_group_size %></td>
               <td><%= promotion.preferred_group_size %></td>
-              <td><%= number_to_currency(promotion.loss_tolerance, locale: :en) %></td>
+              <td>$<%= promotion.loss_tolerance.round(2) %></td>
+              <!-- <td><%#= number_to_currency(promotion.loss_tolerance, locale: :en) %></td> -->
             </tbody>
           </table>
         <!-- </div> -->
