--- a/app/views/promotions/_ticket.html.erb
+++ b/app/views/promotions/_ticket.html.erb
@@ -1,4 +1,4 @@
-<div class="table-responsive" style="display: none;">
+<div class="table-responsive">
   <table class="table">
     <caption>Ticket Details</caption>
     <thead>
