--- a/app/views/navigation/_topnav.html.erb
+++ b/app/views/navigation/_topnav.html.erb
@@ -14,13 +14,12 @@
         Select a pin to see great meal deals!
       </div>
     <% end %>
-    <% if owner_signed_in? %>
-      Logged in as <strong><%= current_owner.email %></strong>.
-      <%= link_to 'Edit profile', edit_owner_registration_path %> |
-      <%= link_to "Logout", destroy_owner_session_path, method: :delete %>
+    <% if current_restaurant %>
+      Logged in as <strong><%= current_restaurant.email %></strong>.
+      <%= link_to "Log Out", logout_path %>
     <% else %>
-      <%= link_to "Sign up", new_owner_registration_path %> |
-      <%= link_to "Login", new_owner_session_path %>
+      <%= link_to "Signup", new_restaurant_path %> |
+      <%= link_to "Log In", login_path %>
     <% end %>
   </div>
 </nav>
