added email and password to signup form

--- a/app/assets/javascripts/templates/new_restaurant.jst.ejs
+++ b/app/assets/javascripts/templates/new_restaurant.jst.ejs
@@ -30,6 +30,18 @@
       <input type="text" id="zipcode" name="zipcode" value="<%= zipcode %>"/>
     </div>
   </div>
+  <div class="form-group row">
+    <label for="email address" class="col-md-2 control-label">Email Address:</label>
+    <div class="col-md-6">
+      <input type="email" id="zemail" name="email" />
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="password" class="col-md-2 control-label">Password:</label>
+    <div class="col-md-6">
+      <input type="password" id="password" name="password" />
+    </div>
+  </div>
   <button class="btn btn-primary">Create Your Account</button>
 </form>
 
