--- a/app/views/promotions/_ticket.html.erb
+++ b/app/views/promotions/_ticket.html.erb
@@ -5,7 +5,7 @@
       <th>Discount</th>
       <th>Min Total Spend</th>
       <th>Group Size</th>
-      <th>Purchaser Name</th>
+      <th>Valid Date</th>
     </thead>
     <tbody>
       <% promotion.tickets.each do |ticket| %>
@@ -13,7 +13,7 @@
         <td><%= number_to_percentage(ticket.discount * 100, precision: 2) %></td>
         <td><%= number_to_currency(ticket.min_total_spend.to_f, locale: :en) %></td>
         <td><%= ticket.group_size %></td>
-        <td>Purchaser</td>
+        <td><%= ticket.valid_on %></td>
       </tr>
       <% end %>
     </tbody>
