rename stylesheet from ticket-view to dashboard, add stylesheet to app.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 @import "navbar";
-@import "ticket-view";
+@import "dashboard";
 
 @import "restaurants";
 @import "purchase";
