add class to target in styling

--- a/app/views/promotions/_ticket.html.erb
+++ b/app/views/promotions/_ticket.html.erb
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-  <table class="table">
+  <table class="table ticket-partial-table">
     <h4>Ticket Details</h4>
     <caption>Valid on <%= promotion.valid_on.strftime("%B %d, %Y") %></caption>
     <thead>
