update views to use new view model object

--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -9,7 +9,7 @@
     <div class="stripe-purchase-form">
       <div class="payment-errors"></div>
 
-      <input class="form-control" type="hidden" name="purchase[ticket_id]" value="<%= @ticket.id %>">
+      <input class="form-control" type="hidden" name="purchase[ticket_id]" value="<%= @view_model.ticket.id %>">
 
       <div class="purchase-form-group">
         <label for="purchaser_name">Purchaser Name</label>
