--- a/app/views/purchases/receipt.html.erb
+++ b/app/views/purchases/receipt.html.erb
@@ -1,3 +1,3 @@
 <h2>Thanks, <%= @view_model.purchaser_name %>!</h2>
 <h3>You paid <strong><%= number_to_currency(@view_model.amount.to_f / 100) %></strong>.</h3>
-<h3>You'll be receiving a text message with your confirmation id for your reservation at <%= @view_model.confirmation_id %>.</h3>
+<h3>You'll be receiving your MealTicket via text message to <%= @view_model.phone_number %> containing your confirmation code: <%= @view_model.confirmation_id %>.</h3>
