add background to app

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,6 @@
 body {
   font-family: 'Lato';
   font-weight: 400;
+  background-image: url("cream_pixels.png");
+  background-repeat: repeat;
 }
