navbar styling: removed empty links from nav, reduced height of nav bar

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,4 +1,10 @@
-#map { position:absolute; top:120px;left:0;bottom:0; width:100%; }
+#map {
+  position:absolute;
+  top:105px;
+  left:0;
+  bottom:0;
+  width:100%;
+}
 
 .leaflet-popup {
   left: -110px !important;
