--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,4 +1,3 @@
-
 .navbar-brand {
   position: absolute;
   width: 100%;
@@ -8,13 +7,16 @@
   font-family: "Oswald", sans-serif;
   font-size: 50px;
   color: #F07241;
+  &:hover {
+    color: #C04848;
+  }
 }
 
 .navbar {
   background-color: #333;
   border-radius: 0px;
   margin-bottom: 0px;
-  height: 120px;
+  height: 105px;
 }
 
 .navbar-header {
