--- a/app/views/navigation/_topnav.html.erb
+++ b/app/views/navigation/_topnav.html.erb
@@ -1,12 +1,6 @@
 <nav class="navbar">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <%= link_to "MEAL TICKET", root_path, class: "navbar-brand" %>
     </div>
     <% if current_page?('/map') %>
@@ -14,12 +8,13 @@
         Select a pin to see great meal deals!
       </div>
     <% end %>
-    <% if current_restaurant %>
-      Logged in as <strong><%= current_restaurant.email %></strong>.
-      <%= link_to "Log Out", logout_path %>
-    <% else %>
-      <%= link_to "Signup", new_restaurant_path %> |
-      <%= link_to "Log In", login_path %>
-    <% end %>
+<!--     <%# if owner_signed_in? %>
+      Logged in as <strong><%#= current_owner.email %></strong>.
+      <%#= link_to 'Edit profile', edit_owner_registration_path %> |
+      <%#= link_to "Logout", destroy_owner_session_path, method: :delete %>
+    <%# else %>
+      <%#= link_to "Sign up", new_owner_registration_path %> |
+      <%#= link_to "Login", new_owner_session_path %>
+    <%# end %> -->
   </div>
 </nav>
