--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -5,6 +5,9 @@
 
 .dashboard-promo-btn {
   border: none;
+  margin-top: inherit;
+  background-color: #1FA5BF;
+  border: none;
 }
 
 .dashboard-new-promo-button {
@@ -20,6 +23,11 @@
   clear: both;
 }
 
+.promo-header {
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
 .promo-table {
   /*border: 1px solid green;*/
   margin-bottom: 30px;;
@@ -28,7 +36,7 @@
 .promo-table th {
   width: 18%;
   text-align: center;
-  padding: 10px;
+  padding: 4px;
   font-size: 14px;
 }
 
@@ -39,7 +47,7 @@
 .promo-table td {
   width: 18%;
   text-align: center;
-  padding: 10px;
+  padding: 4px;
   font-size: 14px;
 }
 
@@ -48,21 +56,38 @@
 }
 
 .view-tickets-btn {
-  padding: 10px;
   font-size: 16px;
-}
-
-.view-tickets-btn {
-  /*background-color: #F07241;*/
   color: white;
+  a {
+    width: 100%;
+    display: inline-block;
+  }
 }
 
 .view-tickets-btn-div {
   background-color: #F07241;
   border: none;
+  margin-bottom: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  a {
+    color: #fff;
+    display: inline-block;
+    width: 100%;
+    padding: 3px;
+  }
+}
+
+.view-tickets-btn-div:hover {
+  background-color: #C04848;
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
 .ticket-div {
+  margin-top: 65px;
 }
 
 
