--- a/app/views/promotions/_ticket.html.erb
+++ b/app/views/promotions/_ticket.html.erb
@@ -1,6 +1,6 @@
 <div class="table-responsive">
   <table class="table ticket-partial-table">
-    <h4>Ticket Details</h4>
+    <h4>Ticket Details for <%= promotion.name %></h4>
     <caption>Valid on <%= promotion.valid_on.strftime("%B %d, %Y") %></caption>
     <thead>
       <th>Discount</th>
