--- a/app/views/restaurants/dashboard.html.erb
+++ b/app/views/restaurants/dashboard.html.erb
@@ -7,11 +7,37 @@
         <%= promotion.name %>
       </div>
       <%= render :partial =>  "promotions/ticket", locals: {promotion: promotion} %>
-
-
   <div class="col-md-4 all-promos">
+    <h3 class="promo-header">Current Promotions</h3>
     <% @restaurant.promotions.each do |promotion| %>
       <div class="col-md-12 single-promo">
+        <%# if promotion.expired? %>
+        <div class="view-tickets-btn-div btn btn-primary btn-block">
+          <%= link_to promotion.name, promotion_tickets_path(promotion), class: "view-tickets-btn" %>
+        </div>
+
+        <table class="promo-table col-md-12">
+          <thead>
+            <th>Min Group</th>
+            <th>Max Group</th>
+            <th>Preferred Group</th>
+            <th>Loss Tolerance</th>
+          </thead>
+          <tbody>
+            <td><%= promotion.min_group_size %></td>
+            <td><%= promotion.max_group_size %></td>
+            <td><%= promotion.preferred_group_size %></td>
+            <td>$<%= promotion.loss_tolerance.round(2) %></td>
+            <!-- <td><%#= number_to_currency(promotion.loss_tolerance, locale: :en) %></td> -->
+          </tbody>
+        </table>
+      </div>
+    <% end %>
+
+    <h3 class="promo-header">Expired Promotions</h3>
+    <% @restaurant.promotions.each do |promotion| %>
+      <div class="col-md-12 single-promo">
+        <%# if promotion.expired? %>
         <div class="view-tickets-btn-div btn btn-primary btn-block">
           <%= link_to promotion.name, promotion_tickets_path(promotion), class: "view-tickets-btn" %>
         </div>
