add ticket styling to new promo view

--- a/app/assets/javascripts/templates/tickets_preview.jst.ejs
+++ b/app/assets/javascripts/templates/tickets_preview.jst.ejs
@@ -1,5 +1,5 @@
-<table class="table">
-  <caption>Ticket Details</caption>
+<table class="table ticket-partial-table">
+  <h4>Ticket Details</h4>
   <thead>
     <th>Discount</th>
     <th>Min Total Spend</th>
