add color and styling to dashboard header

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -3,6 +3,10 @@
   vertical-align: center;
 }
 
+.dashboard-restaurant-name {
+  color: #1FA5BF;
+}
+
 .dashboard-promo-btn {
   border: none;
   margin-top: inherit;
