commented out login, logout, signup

--- a/app/assets/stylesheets/promotion.scss
+++ b/app/assets/stylesheets/promotion.scss
@@ -6,3 +6,13 @@
   background-color: #f6931f;
   color: white;
 }
+
+.ui-slider .ui-slider-range {
+  position: absolute;
+  z-index: 1;
+  font-size: .7em;
+  display: block;
+  border: 0;
+  background-position: 0 0;
+  background: white;
+}
