--- a/app/views/navigation/_topnav.html.erb
+++ b/app/views/navigation/_topnav.html.erb
@@ -3,11 +3,11 @@
     <div class="navbar-header">
       <%= link_to "MEAL TICKET", root_path, class: "navbar-brand" %>
     </div>
-    <% if current_page?('/map') %>
+    <!-- <%# if current_page?('/map') %>
       <div class="map-explanation">
         Select a pin to see great meal deals!
       </div>
-    <% end %>
+    <%# end %> -->
 <!--     <%# if owner_signed_in? %>
       Logged in as <strong><%#= current_owner.email %></strong>.
       <%#= link_to 'Edit profile', edit_owner_registration_path %> |
