--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
 <body>
   <%= render "navigation/topnav" %>
-  <div class="admin-background-container wrapper">
+  <div class="wrapper">
     <div class="container">
       <div class="flash-error">
         <%=flash[:error]%>
@@ -28,6 +28,6 @@
       <%= yield %>
     </div>
   </div>
-<footer class="text-center">MealTicket &copy;2015</footer>
+<footer class="text-center">MealTicket &copy; 2015</footer>
 </body>
 </html>
