--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,7 +6,7 @@
 
 
   <div class="view-tickets">
-    <% @restaurant.promotions.not_expired.each do |promotion| %>
+    <% @restaurant.active_unexpired_promotions.order(valid_on: :asc).each do |promotion| %>
       <div class="view-tickets-promo-name">
         <%= promotion.name %><br>
         <span class="valid-date">Valid on <%= promotion.valid_on.strftime("%B %d, %Y") %></span>
@@ -30,7 +30,7 @@
         </span>
         <%= form_tag new_purchase_path, method: :get, class: "ticket-form ticket-data-item" do %>
             <input type="hidden" name="purchase[ticket_id]" value="<%= ticket.id %>">
-            <input type="submit" class="btn btn-primary btn-xs purchase-ticket-btn" value="<%=number_to_currency(ticket.ticket_price, locale: :en)%>">
+            <button class="btn-xs purchase-ticket-btn"><%=number_to_currency(ticket.ticket_price, locale: :en)%></button>
           <% end %>
         <% end %>
       </div>
