add path helper for background image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
 body {
   font-family: 'Lato';
   font-weight: 400;
-  background-image: url("cream_pixels.png");
+  background-image: image-url("cream_pixels.png");
   background-repeat: repeat;
   margin-bottom: 100px;
 }
