--- a/app/views/restaurants/dashboard.html.erb
+++ b/app/views/restaurants/dashboard.html.erb
@@ -37,7 +37,6 @@
     <h3 class="promo-header">Expired Promotions</h3>
     <% current_restaurant.expired_promotions.each do |promotion| %>
     <div class="col-md-12 single-promo">
-      <%# if promotion.expired? %>
       <div class="view-tickets-btn-div btn btn-primary btn-block">
         <%= link_to promotion.name, promotion_tickets_path(promotion), class: "view-tickets-btn" %>
       </div>
@@ -53,8 +52,7 @@
           <td><%= promotion.min_group_size %></td>
           <td><%= promotion.max_group_size %></td>
           <td><%= promotion.preferred_group_size %></td>
-          <td>$<%= promotion.loss_tolerance.round(2) %></td>
-          <!-- <td><%#= number_to_currency(promotion.loss_tolerance, locale: :en) %></td> -->
+          <td><%= number_to_currency(promotion.loss_tolerance, locale: :en) %></td>
         </tbody>
       </table>
     </div>
