styling for login and sign up

--- a/app/assets/javascripts/templates/yelp_search.jst.ejs
+++ b/app/assets/javascripts/templates/yelp_search.jst.ejs
@@ -1,13 +1,13 @@
 <div class="yelp-search-div">
   <form id="yelp-search" method="get" action="/search_yelp">
     <div class="form-group row">
-      <label for="business-name" class="col-md-2 control-label" class="form-control">Name of your business:</label>
+      <label for="business-name" class="col-md-4 control-label" class="form-control"><h4>Name of your business</h4></label>
       <div class="col-md-6">
         <input type="text" id="business-name" name="business-name" class="form-control"/>
       </div>
     </div>
     <div class="form-group row">
-      <label for="location" class="col-md-2 control-label" class="form-control">Your city or zip code:</label>
+      <label for="location" class="col-md-4 control-label" class="form-control"><h4>Your city or zip code</h4></label>
       <div class="col-md-6">
         <input type="text" id="location" name="location" class="form-control"/>
       </div>
