--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,3 +1,3 @@
-<h2>Sign your business up.</h2>
+<h2>Sign up for MealTicket.</h2>
 <div id="search"></div>
 <%= javascript_include_tag 'search_restaurants.js' %>
