styling for new promo button on dashboard

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -13,6 +13,14 @@
   margin-top: 50px;
   margin-right: 10px;
   color: white;
+  &:hover {
+    color: white;
+    text-decoration: none;
+  };
+  &:visited {
+    color: white;
+    text-decoration: none;
+  };
 }
 
 .dashboard-hr {
